--- a/.eslintrc
+++ b/.eslintrc
@@ -1,23 +1,5 @@
 {
-  "rules": {
-    "indent": [
-      2,
-      2
-    ],
-    "linebreak-style": [
-      2,
-      "unix"
-    ],
-    "semi": [
-      2,
-      "always"
-    ]
-  },
-  "env": {
-    "es6": true,
-    "browser": true,
-    "node": true,
-    "mocha": true
-  },
-  "extends": "eslint:recommended"
+  "extends": "airbnb-base",
+  "import/prefer-default-export": false,
+  max-len: ["error", { "code": 120 }]
 }
