--- a/package.json
+++ b/package.json
@@ -7,23 +7,24 @@
   "author": "Dave Pagurek <dave@davepagurek.com>",
   "license": "MIT",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "gl-matrix": "^2.8.1",
     "regl": "^1.3.7"
   },
   "scripts": {
-    "start": "npm-run-all --parallel dev:server lint:watch",
+    "start": "npm run dev:server",
     "dev:server": "webpack-dev-server --hot --inline",
     "watch": "webpack -w -d",
-    "build": "webpack -p",
-    "lint": "node_modules/.bin/esw webpack.config.* src --color",
-    "lint:watch": "npm run lint -- --watch"
+    "build": "webpack -p"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-loader": "^6.4.1",
-    "babel-preset-es2015": "^6.24.1",
-    "eslint": "^3.5.0",
-    "eslint-watch": "^2.1.14",
-    "npm-run-all": "^4.0.2",
+    "eslint": "^5.5.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "webpack": "^2.4.1",
     "webpack-dev-server": "^2.4.2"
   }
