--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "gl-matrix": "^2.8.1",
+    "lodash": "^4.17.10",
+    "quickhull3d": "^2.0.4",
     "regl": "^1.3.7"
   },
   "scripts": {
