--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "gl-matrix": "^2.8.1",
     "lodash": "^4.17.10",
+    "noisejs": "^2.1.0",
     "quickhull3d": "^2.0.4",
     "regl": "^1.3.7"
   },
